# English_dictionary

./: CMakeLists.txt  project.c
b/: CMakeCache.txt  Makefile  cmake_install.cmake  project  project.glade  t3.glade~  truong.txt
b/cmake-btree-master/: Makefile  cmake_install.cmake
b/mylib/: Makefile  cmake_install.cmake
b/mylib/cmake-btree-master/: Makefile  cmake_install.cmake
mylib/: CMakeLists.txt  create_dic.c  create_dic.h  tools.c  tools.h
